--- a/BranicBlast/src/componant/Quiz.css
+++ b/BranicBlast/src/componant/Quiz.css
@@ -1,5 +1,6 @@
 .container{
-    width: 640px;
+    width: auto;
+    min-width: 400px;
     margin: auto;
     margin-top: 150px;
     background-color: rgb(250, 250, 250);
@@ -8,7 +9,16 @@
     flex-direction: column;
     gap: 20px;
     border-radius: 10px;
-    padding: 40px 50px;
+    padding: 40px 40px;
+    height: auto;
+}
+.container h1{
+    font-size: xx-large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+ text-shadow: #5e5858 1px 2px;
+ color: #9dd1d3;
+ scale:1.5;
+    
 }
 .container hr{
     height: 2px;
@@ -18,18 +28,35 @@
 .container h2{
     font-size: 27px;
     font-weight: 500;   
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.container ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .container ul li{
     display: flex;
     align-items: center;
-    height: 70px;
+    min-height: 40px;
+    min-width: 100px;
     padding-left: 15px;
     border: 1px solid #000000;
+    border-bottom:2px solid #000000 ;
+   border-right:2px solid #000000 ;
     border-radius: 8px;
     margin-bottom: 20px;
     font-size: 20px;
     cursor: pointer;
 }
+.container ul li:hover
+{
+    border-bottom:1px solid #000000 ;
+    border-right: 1px solid #000000;
+  
+}
+
 
 .container button{
     margin: auto;
@@ -46,6 +73,7 @@
 .container .index {
     margin: auto;
     font-size: 18px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
 
 }
 .container .correct{
