--- a/BranicBlast/src/componant/Quiz.css
+++ b/BranicBlast/src/componant/Quiz.css
@@ -24,11 +24,23 @@
     height: 2px;
     border: none;
     background: #000000;
+
 }
-.container h2{
+div.container h2.que {
+    user-select: none;
     font-size: 27px;
     font-weight: 500;   
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   border: 1px solid #000000;
+   padding: 4px;
+    border-radius: 8px;
+    border-bottom: 3px solid #000000;
+    border-right: 3px solid #000000;
+    background-color: #f0f0f0;
+    color: #000000;
+   
+    min-width: 100px;
+    padding-left: 5px;
 }
 .container ul{
     display: flex;
@@ -40,7 +52,7 @@
     display: flex;
     align-items: center;
     min-height: 40px;
-    min-width: 100px;
+    min-width: 200px;
     padding-left: 15px;
     border: 1px solid #000000;
     border-bottom:2px solid #000000 ;
@@ -49,6 +61,7 @@
     margin-bottom: 20px;
     font-size: 20px;
     cursor: pointer;
+    user-select: none;
 }
 .container ul li:hover
 {
