--- a/BranicBlast/src/index.css
+++ b/BranicBlast/src/index.css
@@ -1,6 +1,7 @@
 #root
 {
-    background-color: rgb(187, 209, 235);
+    
+  
     display: flex;
     flex-direction: column;
    
@@ -11,4 +12,7 @@
 
 body{
     background: rgb(187, 209, 235);
+    background-image: url('bg.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
