--- a/BranicBlast/src/componant/DashBord.css
+++ b/BranicBlast/src/componant/DashBord.css
@@ -15,11 +15,11 @@
 button
 {
     margin-top: 30px;
-    width: 50px;
-    height: 30px;
+    width: 100px;
+    height: 40px;
     border-radius: 8px;
     outline: none;
-    margin: 50spx;
+    margin: 50px;
     
     background-color: rgb(242, 242, 247);
 }
