--- a/BranicBlast/src/componant/home.css
+++ b/BranicBlast/src/componant/home.css
@@ -2,12 +2,13 @@
     text-align: center;
     padding: 20px;
     background-color: #f5f5f5;
-    height: 50%;
+    height: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 60%;
+    width: 100%;
+    border-radius: 19px;
 }
 
 .home-header {
