--- a/BranicBlast/src/index.css
+++ b/BranicBlast/src/index.css
@@ -15,4 +15,10 @@ body{
     background-image: url('bg.svg');
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 100vh;
+}
+@media screen and (max-width: 600px) {
+    body {
+        background-image: url('bg-small.svg');
+    }
 }
